refactor: add instantclicks

--- a/resources/views/post.edge
+++ b/resources/views/post.edge
@@ -5,6 +5,8 @@
 	<title></title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js" integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw==" crossorigin="anonymous"></script>
 
+	<script type="text/javascript" src="/app.js"></script>
+
 	<style type="text/css">
 		.layout {
 			display: flex;
@@ -22,6 +24,11 @@
 
 	<section>
 		<div class="layout">
+			<div>
+				<a href="{{ route('showProject', { id: 4 }) }}">Go back</a>
+			</div>
+				<hr>
+
 			<article>
 				<h1><a href="{{ route('showPost', { id: post.id }) }}">{{ post.title }}</a></h1>
 				<span>{{ post.upvotesCount }}</span>
