--- a/resources/views/project.edge
+++ b/resources/views/project.edge
@@ -6,6 +6,8 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js" integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw==" crossorigin="anonymous"></script>
 
+	<script type="text/javascript" src="/app.js"></script>
+
 	<style type="text/css">
 		.layout {
 			display: flex;
