feat: add user endpoint and update seeder to create meaningful data

--- a/resources/views/errors/oauth-failure.edge
+++ b/resources/views/errors/oauth-failure.edge
@@ -1,5 +1,7 @@
 <h1> Unable to authenticate </h1>
-<p> The given url is broken or expired. Please go back and continue the login process </p>
+<p>
+	{{ message || 'The given url is broken or expired. Please go back and continue the login process' }}
+</p>
 
 <hr>
 
